fix: overflow and markers li

--- a/task_HTML_CSS/css/style.css
+++ b/task_HTML_CSS/css/style.css
@@ -69,6 +69,10 @@ a{
 a:hover{
     color: rgb(255, 115, 0);
 }
+.overflow{
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
 /**************main*************
 **************aside*************/
 
@@ -78,7 +82,7 @@ main{
     height: 100%;
     box-sizing: border-box;
     margin-top: -250px;
-    padding: 38px 0 70px 0;
+    padding: 35px 0 70px 0;
 }
 .aside{
     display: table-cell;
@@ -94,6 +98,8 @@ h1{
     padding: 11px 0 11px 65px;
     margin: 0 0 18px 0;
     color: #2e2e2e;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .regular{
     font-size: 18px;
@@ -122,25 +128,29 @@ h1{
     text-decoration: underline;
 }
 .circls{
-    list-style-image: url(../image/circls.png);
-    padding-left: 0;
+    list-style: none;
+    padding: 0;
 }
-.circls > div li:before{
+.circls li div{
+    background: url(../image/circls.png) no-repeat 0 6px;
+    margin-left: -32px;
+    padding-left: 32px;
+}
+.circls li div:before{
     content:'';
     position:absolute;
-    border-left:1px solid #cccbcb;
-    left:262px;
-    top:872px;
-    height:88px;
-  }
-.circls > div li:last-child:before{
+    border-left:1px solid #b2b2b2;
+    left:12px;
+    top:41px;
+    height:90px;
+}
+.circls li:last-child div:before{
     content:none;
 }
-.circls > div li:last-child{
-    padding-bottom:0;
-}
 .person{
-    padding: 0 0 32px 36px;
+    padding: 0 0 32px 35px;
+    position: relative;
+    height: 72px;
 }
 .reference{
     color: #4c5eab;
@@ -186,7 +196,11 @@ figcaption{
     text-align: center;
     line-height: 170%;
     height: 97px;
+    width: 240px;
     box-sizing: border-box;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 /******************************
 ************footer************/
